# codex

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-protocol/schema/json/: ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/schema/json/v2/: WorkflowRunUpdatedNotification.json
codex-rs/app-server-protocol/schema/typescript/: ServerNotification.ts
codex-rs/app-server-protocol/schema/typescript/v2/: WorkflowAgentProgress.ts  WorkflowAgentStatus.ts  WorkflowPhaseProgress.ts  WorkflowRunStatus.ts  index.ts  (+1 more)
codex-rs/app-server-protocol/src/protocol/: common.rs
codex-rs/app-server/src/: extensions.rs
codex-rs/core/src/: lib.rs
codex-rs/core/src/agent/: role.rs  role_tests.rs
codex-rs/core/src/session/: turn.rs
codex-rs/ext/team/: BUILD.bazel  Cargo.toml
codex-rs/ext/team/src/: decomposition.rs  error.rs  extension.rs  lib.rs  model.rs  prompt.rs  runtime.rs  scheduler.rs  store.rs  summary.rs  team.rs  tests.rs  tool.rs
codex-rs/ext/workflow/: BUILD.bazel  Cargo.toml
codex-rs/ext/workflow/src/: extension.rs  lib.rs  parser.rs  parser_tests.rs  prompt.rs  runtime.rs  runtime_tests.rs  runtime_value.rs  script.rs  script_tests.rs  tool.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/rollout-trace/src/: protocol_event.rs
codex-rs/rollout/src/: policy.rs
codex-rs/tui/src/: app_event.rs  chatwidget.rs  slash_command.rs
codex-rs/tui/src/app/: app_server_event_targets.rs  event_dispatch.rs
codex-rs/tui/src/bottom_pane/: mod.rs
codex-rs/tui/src/chatwidget/: constructor.rs  protocol.rs  slash_dispatch.rs  tests.rs  workflow_lifecycle.rs  workflow_popup.rs
codex-rs/tui/src/history_cell/: mod.rs  tests.rs  workflow.rs
(+13 files in other folders)
