[package]
edition.workspace = true
license.workspace = true
name = "codex-team-extension"
version.workspace = true

[lib]
name = "codex_team_extension"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
codex-core = { workspace = true }
codex-extension-api = { workspace = true }
codex-protocol = { workspace = true }
codex-tools = { workspace = true }
codex-utils-path = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
codex-utils-output-truncation = { workspace = true }
