[package]
edition.workspace = true
license.workspace = true
name = "codex-workflow-extension"
version.workspace = true

[lib]
name = "codex_workflow_extension"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
codex-extension-api = { workspace = true }
codex-protocol = { workspace = true }
codex-tools = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
